hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__convert_s@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal double @_hl.main.1(i32 %0) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca i32, align 4
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i32 %0, ptr %"2_0", align 4
  %"2_01" = load i32, ptr %"2_0", align 4
  %1 = sitofp i32 %"2_01" to double
  store double %1, ptr %"4_0", align 8
  %"4_02" = load double, ptr %"4_0", align 8
  store double %"4_02", ptr %"0", align 8
  %"03" = load double, ptr %"0", align 8
  ret double %"03"
}
