hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__convert_u@pre-mem2reg@llvm14.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal double @_hl.main.1(i16 %0) {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca i16, align 2
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, i16* %"2_0", align 2
  %"2_01" = load i16, i16* %"2_0", align 2
  %1 = uitofp i16 %"2_01" to double
  store double %1, double* %"4_0", align 8
  %"4_02" = load double, double* %"4_0", align 8
  store double %"4_02", double* %"0", align 8
  %"03" = load double, double* %"0", align 8
  ret double %"03"
}
