hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__convert_u@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal double @_hl.main.1(i16 %0) !dbg !3 {
alloca_block:
  %"0" = alloca double, align 8
  %"2_0" = alloca i16, align 2
  %"4_0" = alloca double, align 8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, ptr %"2_0", align 2
  %"2_01" = load i16, ptr %"2_0", align 2
  %1 = uitofp i16 %"2_01" to double, !dbg !9
  store double %1, ptr %"4_0", align 8, !dbg !9
  %"4_02" = load double, ptr %"4_0", align 8
  store double %"4_02", ptr %"0", align 8
  %"03" = load double, ptr %"0", align 8
  ret double %"03"
}

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !8}
!7 = !DIBasicType(name: "f64", size: 64, encoding: DW_ATE_float)
!8 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!9 = !DILocation(line: 27062, column: 402, scope: !3)
