hugr-llvm/src/extension/snapshots/hugr_llvm__extension__conversions__test__ifrombool@pre-mem2reg@llvm21.snap
---
source: hugr-llvm/src/extension/conversions.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

define internal i8 @_hl.main.1(i1 %0) {
alloca_block:
  %"0" = alloca i8, align 1
  %"2_0" = alloca i1, align 1
  %"4_0" = alloca i8, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i1 %0, ptr %"2_0", align 1
  %"2_01" = load i1, ptr %"2_0", align 1
  %1 = icmp eq i1 %"2_01", true
  %2 = select i1 %1, i8 1, i8 0
  store i8 %2, ptr %"4_0", align 1
  %"4_02" = load i8, ptr %"4_0", align 1
  store i8 %"4_02", ptr %"0", align 1
  %"03" = load i8, ptr %"0", align 1
  ret i8 %"03"
}
